# vfh_pro

./: README.md
ros_ws/: notes.txt
ros_ws/devel/: _setup_util.py
ros_ws/devel/lib/CameraResectioning/: CameraResectioning
ros_ws/devel/lib/gtsam_tutorials/: CameraResectioning  creating_fg  localization  pose_slam
ros_ws/devel/lib/local_planner/: laserscan_to_pointcloud  local_planner  path_follower
ros_ws/devel/lib/pkgconfig/: CameraResectioning.pc  gtsam_tutorials.pc  landmark_track.pc  local_planner.pc  rosbot_description.pc  rosbot_gazebo.pc  rosbot_navigation.pc  sim_envs.pc  velodyne_description.pc  velodyne_gazebo_plugins.pc
ros_ws/devel/lib/python2.7/dist-packages/rosbot_description/: __init__.py
ros_ws/devel/share/CameraResectioning/cmake/: CameraResectioningConfig.cmake
ros_ws/devel/share/gtsam_tutorials/cmake/: gtsam_tutorialsConfig.cmake
ros_ws/devel/share/landmark_track/cmake/: landmark_trackConfig.cmake
ros_ws/devel/share/local_planner/cmake/: local_plannerConfig.cmake
ros_ws/devel/share/rosbot_description/cmake/: rosbot_descriptionConfig.cmake
ros_ws/devel/share/rosbot_gazebo/cmake/: rosbot_gazeboConfig.cmake
ros_ws/devel/share/rosbot_navigation/cmake/: rosbot_navigationConfig.cmake
ros_ws/devel/share/sim_envs/cmake/: sim_envsConfig.cmake
ros_ws/devel/share/velodyne_description/cmake/: velodyne_descriptionConfig.cmake
ros_ws/devel/share/velodyne_gazebo_plugins/cmake/: velodyne_gazebo_pluginsConfig.cmake
ros_ws/src/: .rosinstall  .rosinstall.bak
ros_ws/src/global_planner/: CMakeLists.txt  package.xml
ros_ws/src/global_planner/launch/: global_planner.launch  navigation.launch
ros_ws/src/global_planner/src/: global_planner.cpp  global_planner.h  passthrough_filter.cpp  send_goal.py
ros_ws/src/global_planner/srv/: Goal.srv  Waypoints.srv
ros_ws/src/gtsam_tutorials/: CMakeLists.txt  package.xml
ros_ws/src/gtsam_tutorials/src/: CameraResectioning.cpp
ros_ws/src/local_planner/: CMakeLists.txt
ros_ws/src/local_planner/launch/: local_planner.launch
ros_ws/src/local_planner/src/: laserscan_to_pointcloud.cpp  local_planner.cpp  path_follower.cpp  send_waypoint.py
ros_ws/src/rosbot_description/launch/: rosbot_gazebo.launch
ros_ws/src/sim_envs/: CMakeLists.txt
ros_ws/src/sim_envs/launch/: house.launch  house_env.launch  keyboard_teleop.launch  kitchen.launch  octomap.launch  run_full_simulation.launch  run_srp_simulation.launch  srp_env.launch
ros_ws/src/sim_envs/maps/: kitchen_map.yaml
ros_ws/src/sim_envs/models/black_cube/: model.config  model.sdf
ros_ws/src/sim_envs/models/brown_cube/: model.config
ros_ws/src/sim_envs/models/green_cube/: model.config
ros_ws/src/sim_envs/models/red_cube/: model.config
ros_ws/src/sim_envs/models/violet_cube/: model.sdf
ros_ws/src/sim_envs/models/yellow_cube/: model.config  model.sdf
ros_ws/src/sim_envs/sensor/: sensor.urdf.xacro
ros_ws/src/sim_envs/src/: keyboard_to_cmd_vel.py
ros_ws/src/sim_envs/worlds/: kitchen.world  nice_house.world  slim_house.world  srp_house.world
ros_ws/src/slim/: CMakeLists.txt  package.xml
ros_ws/src/slim/launch/: find_objects.launch  gotoplaces.launch
ros_ws/src/slim/src/: gotoplaces.py  locate_objects.py  perception.launch  slim_node.py
ros_ws/src/srp/: CMakeLists.txt  package.xml
ros_ws/src/srp/launch/: load_srp_prereq.launch
ros_ws/src/srp/src/: arm_test.py  old_srp.py  pick_objects.py  publish_objects_poses.py  srp.py
